--- a/index.html
+++ b/index.html
@@ -5,26 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css" type='text/css'>
+    
     <title>Document</title>
 </head>
 <body>
+    <p>Tic Tac Toe!</p>
     <table>
         <tr>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td id = '1'></td>
+            <td id = '2'></td>
+            <td id = '3'></td>
         </tr>
         <tr>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td id = '4'></td>
+            <td id = '5'></td>
+            <td id = '6'></td>
         </tr>
         <tr>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td id = '7'></td>
+            <td id = '8'></td>
+            <td id = '9'></td>
         </tr>
     </table>
-    
+    <script src="script.js" type='text/javascript'></script>
 </body>
 </html>
