--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Tic Tac Toe!</p>
+    <p id='title'>Tic Tac Toe!</p>
+    <p class ='wins'>X Wins:</p>
+        <div id = 'div1'></div>
+    <p class ='wins'>O Wins:</p>
+        <div id = 'div2'></div>
+
     <table>
         <tr>
             <td id = '1'></td>
